# valiant-valkyries

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.old.md  dev-requirements.txt  docker-compose.yml  leaderboard.json  makefile  pyproject.toml  requirements.txt
backend/: env.json  main.py
frontend/: index.css  index.html  main.js
