[tool.poetry]
name = "valiant-valkyries"
version = "0.1.0"
description = "Python Discode Code Jam Solution by The Valiant Valkyries"
authors = ["vv"]

packages = [
    { include = "backend" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi= "0.79.0"
"uvicorn[standard]" = "0.18.2"
uvicorn = {version = "0.18.2", extras = ["standard"]}

[tool.poetry.dev-dependencies]
flake8 = "~=4.0.1"
isort = "~=5.10.1"
pre-commit = "~=2.17.0"
flake8-annotations = "~=2.9.0"
flake8-bandit = "~=3.0.0"
flake8-docstrings = "~=1.6.0"
flake8-isort = "~=4.1.2.post0"

[tool.poetry.scripts]
api = "backend.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
